Создано с помощью Colaboratory

--- a/lesson_2_HW.ipynb
+++ b/lesson_2_HW.ipynb
@@ -62,7 +62,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 69,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "data1, target =  make_regression(1000, 2)\n",
         "data1[:,0] = data1[:,0]*10\n"
       ],
-      "execution_count": 70,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -85,22 +85,22 @@
           "height": 282
         },
         "id": "C-P358gb1B_Z",
-        "outputId": "34366320-7df1-47bb-e99e-160216051b1a"
+        "outputId": "1edee2f7-0d0d-464e-bffa-8c217bd7dc89"
       },
       "source": [
         "plt.plot(data1[:,0],target,'.')"
       ],
-      "execution_count": 71,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f8fc4121610>]"
+              "[<matplotlib.lines.Line2D at 0x7f8fc5212f10>]"
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 131
         },
         {
           "output_type": "display_data",
@@ -123,12 +123,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k5Ek6ixh1RSr",
-        "outputId": "d25a7224-e0a4-4894-9919-66bf4e2797c9"
+        "outputId": "44b0005c-4d87-4cfc-b87c-04daa45bb298"
       },
       "source": [
         "data1[1].min(), data1[1].max()"
       ],
-      "execution_count": 72,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 132
         }
       ]
     },
@@ -149,12 +149,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_Bu6Ccp1UrA",
-        "outputId": "135f67cc-b56b-4d72-d66d-6c284975b98b"
+        "outputId": "c7c9a857-84b5-4266-fe93-271c32c5ae49"
       },
       "source": [
         "data1[2].min(), data1[2].max()"
       ],
-      "execution_count": 73,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 133
         }
       ]
     },
@@ -175,14 +175,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "INwpQsKh1Xgw",
-        "outputId": "b2969a02-1ea0-401c-dd6a-cdf467198f27"
+        "outputId": "0d5904b6-b2ea-45eb-b4e7-7c799b6d0ce5"
       },
       "source": [
         "X_norm = data1.copy()\n",
         "X_norm = X_norm.astype(np.float64)\n",
         "X_norm"
       ],
-      "execution_count": 74,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 134
         }
       ]
     },
@@ -209,13 +209,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hn9OdGhF1Zq2",
-        "outputId": "b5ba5c5f-a6d4-40c1-d5d4-8ea43512cd89"
+        "outputId": "7baed2d5-efe7-4614-d2bc-09ecf437f68c"
       },
       "source": [
         "X_norm[1] = (data1[1] - data1[1].min()) / (data1[1].max() - data1[1].min())\n",
         "X_norm"
       ],
-      "execution_count": 75,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +231,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 135
         }
       ]
     },
@@ -242,13 +242,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GWHxMATy1cC4",
-        "outputId": "9626a68a-4972-4a36-9646-674ad8a453c4"
+        "outputId": "e8ddcea5-0fc9-4dc4-a37a-e64685f08aba"
       },
       "source": [
         "X_norm[2] = (data1[2] - data1[2].min()) / (data1[2].max() - data1[2].min())\n",
         "X_norm"
       ],
-      "execution_count": 76,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +264,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 136
         }
       ]
     },
@@ -275,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zWIf7lDM1f5Y",
-        "outputId": "702ebd16-3db5-43b1-f5c9-9216e8e8fe9e"
+        "outputId": "58a98459-5d48-4dd0-8b40-26c3cea71867"
       },
       "source": [
         "X_st = data1.copy().astype(np.float64)\n",
@@ -283,7 +283,7 @@
         "X1_std = data1[1].std()\n",
         "print(X1_mean, X1_std)"
       ],
-      "execution_count": 77,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,13 +301,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJvUUmXk1iA4",
-        "outputId": "d57f9c9e-38a7-45d1-9e72-1701feb4c6ee"
+        "outputId": "0911108b-0312-498f-a77b-76cf8321cd25"
       },
       "source": [
         "X_st[1] = (data1[1] - X1_mean) / X1_std\n",
         "X_st"
       ],
-      "execution_count": 78,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 138
         }
       ]
     },
@@ -337,7 +337,7 @@
         "    res = (data1 - data1.mean()) / data1.std()\n",
         "    return res\n"
       ],
-      "execution_count": 79,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
       "source": [
         "X_st[2] = calc_std_fit(data1[2])"
       ],
-      "execution_count": 80,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -358,13 +358,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Rg0PhTG1tFN",
-        "outputId": "a87dfd35-15aa-48dc-89a9-565868526ad2"
+        "outputId": "03829d90-6b6f-4e91-fde1-72538091b4b6"
       },
       "source": [
         "X_st[3] = calc_std_fit(data1[3])\n",
         "X_st"
       ],
-      "execution_count": 81,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 141
         }
       ]
     },
@@ -397,7 +397,7 @@
         "    for j in range(data1.shape[1]):\n",
         "        data[i][j] = (data[i][j] - means[j])/stds[j]"
       ],
-      "execution_count": 82,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -409,7 +409,7 @@
         "from sklearn.preprocessing import StandardScaler, Normalizer\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 83,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -425,7 +425,7 @@
         "    for j in range(data1_test.shape[1]):\n",
         "        data_test[i][j] = (data_test[i][j] - means[j])/stds[j]"
       ],
-      "execution_count": 84,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -436,7 +436,7 @@
           "height": 265
         },
         "id": "MRX6-ePmIl5C",
-        "outputId": "18dbae4d-b0c6-4961-dce0-ded00c2049a3"
+        "outputId": "8c679702-a7e3-4f59-f07a-7d687d638326"
       },
       "source": [
         "c_lr1 = LinearRegression().fit(data1,target)\n",
@@ -451,7 +451,7 @@
         "plt.grid(True)\n",
         "plt.show()\n"
       ],
-      "execution_count": 85,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "display_data",
@@ -474,14 +474,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zOYkKKcNIl5D",
-        "outputId": "610c6c39-8da9-47e1-85ec-577e5ede5941"
+        "outputId": "c4878667-79f1-4356-d1df-e5258ca41946"
       },
       "source": [
         "e1 = np.mean(np.abs(y-target_test))\n",
         "e = np.mean(np.abs(y1-target_test))\n",
         "e,e1"
       ],
-      "execution_count": 86,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 146
         }
       ]
     },
@@ -502,12 +502,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uWa3W2CFIl5D",
-        "outputId": "9f9d07a3-9aff-4f69-8618-7a252ac3d3d7"
+        "outputId": "a519d712-e4e8-4b95-daa0-dc1c69d21e39"
       },
       "source": [
         "c_lr1.coef_, c_lr.coef_"
       ],
-      "execution_count": 87,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +517,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 147
         }
       ]
     },
@@ -531,7 +531,7 @@
         "    y = X.dot(w)\n",
         "    return (sum((y - y_pred)**2)) / len(y)"
       ],
-      "execution_count": 88,
+      "execution_count": 148,
       "outputs": []
     },
     {
@@ -551,7 +551,7 @@
         "            print(i, W, err)\n",
         "    return W"
       ],
-      "execution_count": 89,
+      "execution_count": 149,
       "outputs": []
     },
     {
@@ -561,12 +561,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1_ysNxMH4Xwt",
-        "outputId": "eb4f6625-5a87-4694-acc1-de23f4192fb8"
+        "outputId": "67be6933-3e87-49eb-9b66-7a8635f5f888"
       },
       "source": [
         "model(X_st, target, iterations=0, alpha=1e-2)"
       ],
-      "execution_count": 90,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -825,7 +825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 150
         }
       ]
     },
@@ -836,7 +836,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hwIeP5Y4iqtQ",
-        "outputId": "2de32db0-1f76-42c0-bd2e-0ad78778e3f2"
+        "outputId": "794c07a4-cc7f-4786-e355-db55f5f58a5a"
       },
       "source": [
         "w = np.random.randn(2) \n",
@@ -869,7 +869,7 @@
         " \n",
         "print(f'В случае использования стохастического градиентного спуска функционал ошибки составляет {round(errors[-1], 4)}')"
       ],
-      "execution_count": 91,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +888,7 @@
           "height": 312
         },
         "id": "MXCKz_wliqtZ",
-        "outputId": "2eb13594-6571-4683-c552-b3aabbc3d3ee"
+        "outputId": "42b7ffa2-7f0a-4479-f25a-e27f5dda6294"
       },
       "source": [
         "plt.plot(range(len(errors)), errors)\n",
@@ -896,7 +896,7 @@
         "plt.xlabel('Iteration number')\n",
         "plt.ylabel('MSE')"
       ],
-      "execution_count": 92,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 152
         },
         {
           "output_type": "display_data",
@@ -933,14 +933,14 @@
         "    W = np.random.randn(data1.shape[0])\n",
         "    n = data1.shape[1]\n",
         "    for i in range(1, iterations+1):\n",
-        "        y_pred = np.dot(W, X)\n",
-        "        err = mserror(y, y_pred)\n",
-        "        W -= alpha * (1/n * 2 * np.dot((y_pred - y), data1.T) + lambda_ * W) \n",
+        "        y_pred = np.dot(W, data1)\n",
+        "        err = mserror(target, y_pred)\n",
+        "        W -= alpha * (1/n * 2 * np.dot((y_pred - target), data1.T) + lambda_ * W) \n",
         "        if i % (iterations / 10) == 0:\n",
         "            print(i, W, err)\n",
         "    return W"
       ],
-      "execution_count": 93,
+      "execution_count": 153,
       "outputs": []
     },
     {
@@ -950,12 +950,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IoGG3La63sAJ",
-        "outputId": "c8c7eee7-344d-4adf-d9ab-ff84723d7268"
+        "outputId": "45cc71a3-32f9-4470-9087-8e3d744676b9"
       },
       "source": [
         "model_reg2(X_st, target, iterations=0, alpha=1e-2, lambda_=1e-4)"
       ],
-      "execution_count": 94,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1214,7 +1214,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 154
         }
       ]
     }
