Создано с помощью Colaboratory

--- a/lesson_3_HW.ipynb
+++ b/lesson_3_HW.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lesson_3_HW.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPavH3Wxs3kkUVY0FyFLYf/",
+      "authorship_tag": "ABX9TyNW7cclqekP12ArUMsIQmK8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -580,17 +580,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6vInJQ9yzCW7"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "id": "6vInJQ9yzCW7",
+        "outputId": "c3be1048-8fdf-443e-f5d7-c913f0655865"
       },
       "source": [
         "plt.figure(figsize = (20,5))\n",
         "plt.title('log loss')\n",
         "\n",
-        "plt.plot(range(len(losses)),np(log(losses))\n",
+        "plt.plot(range(len(losses)),np.(log(losses))\n",
         "plot.grid(True)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 260,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-260-22434b1ffb27>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    plt.plot(range(len(losses)),np.(log(losses))\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
