--- a/lesson_4_HW.ipynb
+++ b/lesson_4_HW.ipynb
@@ -60,7 +60,7 @@
         "\n",
         "import numpy as np"
       ],
-      "execution_count": 89,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "                                                      n_classes = 2, n_redundant=0, \n",
         "                                                      n_clusters_per_class=1, random_state=5)"
       ],
-      "execution_count": 90,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 500
         },
-        "outputId": "ed13c74e-e51e-4d10-9220-cc5763269acf"
+        "outputId": "2152ab0e-9549-49ae-c8e8-036b84db9b29"
       },
       "source": [
         "# визуализируем сгенерированные данные\n",
@@ -107,17 +107,17 @@
         "plt.scatter(list(map(lambda x: x[0], classification_data)), list(map(lambda x: x[1], classification_data)), \n",
         "              c=classification_labels, cmap=colors)"
       ],
-      "execution_count": 91,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f4fcde91490>"
+              "<matplotlib.collections.PathCollection at 0x7f630cf2c6d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 41
         },
         {
           "output_type": "display_data",
@@ -149,7 +149,7 @@
         "        self.true_branch = true_branch  # поддерево, удовлетворяющее условию в узле\n",
         "        self.false_branch = false_branch  # поддерево, не удовлетворяющее условию в узле"
       ],
-      "execution_count": 92,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
         "        prediction = max(classes, key=classes.get)\n",
         "        return prediction        "
       ],
-      "execution_count": 93,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "        \n",
         "    return impurity"
       ],
-      "execution_count": 94,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "    \n",
         "    return current_gini - p * gini(left_labels) - (1 - p) * gini(right_labels)"
       ],
-      "execution_count": 95,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
         "        \n",
         "    return true_data, false_data, true_labels, false_labels"
       ],
-      "execution_count": 96,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         "\n",
         "    return best_quality, best_t, best_index"
       ],
-      "execution_count": 97,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "    # Возвращаем класс узла со всеми поддеревьями, то есть целого дерева\n",
         "    return Node(index, t, true_branch, false_branch)"
       ],
-      "execution_count": 98,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -336,7 +336,7 @@
         "    else:\n",
         "        return classify_object(obj, node.false_branch)"
       ],
-      "execution_count": 99,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -353,7 +353,7 @@
         "        classes.append(prediction)\n",
         "    return classes"
       ],
-      "execution_count": 100,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
         "                                                                                     test_size = 0.3,\n",
         "                                                                                     random_state = 1)"
       ],
-      "execution_count": 101,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
         "            correct += 1\n",
         "    return correct / float(len(actual)) * 100.0"
       ],
-      "execution_count": 102,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -396,17 +396,17 @@
         "id": "X_3fBlvBroNB"
       },
       "source": [
-        "def get_result(n_features, min_leaf, train_data=train_data,test_data=test_data,\n",
+        "def result(n_features, min_leaf, train_data=train_data,test_data=test_data,\n",
         "              train_labels=train_labels,test_labels=test_labels):\n",
         "    tree = build_tree(train_data, train_labels, n_features, min_leaf)\n",
         "    train_res = predict(train_data, tree)\n",
         "    result = predict(test_data, tree)\n",
         "    train_acc = accuracy_metric(train_labels, train_res)\n",
         "    test_acc = accuracy_metric(test_labels, result)\n",
-        "    print(f'Обучение: {train_acc:.3f}, тест: {test_acc:.3f}')\n",
+        "    print(f'Обучение: train: {train_acc:.3f}, test: {test_acc:.3f}')\n",
         "    print(f'Характеристики: {n_features}, Мин. лист: {min_leaf}')"
       ],
-      "execution_count": 103,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -416,36 +416,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FaVJyyC4rqqU",
-        "outputId": "a080e17c-61b5-4423-c40d-ed73210ae472"
+        "outputId": "93d833af-a6eb-45da-b108-fdd4a48810bf"
       },
       "source": [
         "for i in range(3,6):\n",
         "    for j in range(5,7):\n",
-        "        get_result(i, j)\n",
+        "        result(i, j)\n",
         "        print()"
       ],
-      "execution_count": 104,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Обучение: 81.429, тест: 43.333\n",
+            "Обучение: train: 81.429, test: 43.333\n",
             "Характеристики: 3, Мин. лист: 5\n",
             "\n",
-            "Обучение: 80.000, тест: 43.333\n",
+            "Обучение: train: 80.000, test: 43.333\n",
             "Характеристики: 3, Мин. лист: 6\n",
             "\n",
-            "Обучение: 87.143, тест: 26.667\n",
+            "Обучение: train: 87.143, test: 26.667\n",
             "Характеристики: 4, Мин. лист: 5\n",
             "\n",
-            "Обучение: 85.714, тест: 26.667\n",
+            "Обучение: train: 85.714, test: 26.667\n",
             "Характеристики: 4, Мин. лист: 6\n",
             "\n",
-            "Обучение: 87.143, тест: 26.667\n",
+            "Обучение: train: 87.143, test: 26.667\n",
             "Характеристики: 5, Мин. лист: 5\n",
             "\n",
-            "Обучение: 85.714, тест: 26.667\n",
+            "Обучение: train: 85.714, test: 26.667\n",
             "Характеристики: 5, Мин. лист: 6\n",
             "\n"
           ]
@@ -479,7 +479,7 @@
       "source": [
         "data, labels = datasets.make_regression(n_features=2, random_state=5)"
       ],
-      "execution_count": 105,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -489,12 +489,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBcgFluBwV98",
-        "outputId": "90800456-101a-4e83-ace6-b916508e56bc"
+        "outputId": "59638c5f-7379-4ffb-e950-4452302ed634"
       },
       "source": [
         "data[:5]"
       ],
-      "execution_count": 106,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 56
         }
       ]
     },
@@ -519,12 +519,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xerFszjDyQFo",
-        "outputId": "5d649e42-da95-4938-d7d8-0f0212b1b4c5"
+        "outputId": "cc02757a-22cd-4e25-863a-1fad9a69918b"
       },
       "source": [
         "labels[:5]"
       ],
-      "execution_count": 107,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 57
         }
       ]
     },
@@ -553,7 +553,7 @@
         "        self.true_branch = true_branch  # поддерево, удовлетворяющее условию в узле\n",
         "        self.false_branch = false_branch  # поддерево, не удовлетворяющее условию в узле"
       ],
-      "execution_count": 108,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -578,7 +578,7 @@
         "        prediction = objects.mean()\n",
         "        return prediction   "
       ],
-      "execution_count": 109,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
         "    pred = objects.mean()\n",
         "    return np.mean((labels - pred) ** 2)"
       ],
-      "execution_count": 110,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -611,7 +611,7 @@
         "    \n",
         "    return current_mean - p * means(left_labels) - (1 - p) * means(right_labels)"
       ],
-      "execution_count": 111,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
         "        \n",
         "    return true_data, false_data, true_labels, false_labels"
       ],
-      "execution_count": 112,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -671,7 +671,7 @@
         "\n",
         "    return best_quality, best_t, best_index"
       ],
-      "execution_count": 113,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "    # Возвращаем класс узла со всеми поддеревьями, то есть целого дерева\n",
         "    return Node(index, t, true_branch, false_branch)"
       ],
-      "execution_count": 114,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
         "    else:\n",
         "        return classify_object(obj, node.false_branch)"
       ],
-      "execution_count": 115,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -735,7 +735,7 @@
         "        predictions.append(prediction)\n",
         "    return predictions"
       ],
-      "execution_count": 116,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -747,7 +747,7 @@
         "train_data, test_data, train_labels, test_labels = model_selection.train_test_split(data, \n",
         "                                                labels, test_size = 0.3, random_state = 1)"
       ],
-      "execution_count": 117,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -758,7 +758,7 @@
       "source": [
         "my_tree = build_tree(train_data, train_labels)"
       ],
-      "execution_count": 118,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
       "source": [
         "train_res = predict(train_data, my_tree)"
       ],
-      "execution_count": 119,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -780,7 +780,7 @@
       "source": [
         "res = predict(test_data, my_tree)"
       ],
-      "execution_count": 120,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -792,7 +792,7 @@
         "def mse_(labels, res):\n",
         "    return np.mean((labels - res) ** 2)"
       ],
-      "execution_count": 121,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -802,12 +802,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32M_g5AltmaR",
-        "outputId": "a3c2033b-3854-4819-8cb9-59e28e6a34c4"
+        "outputId": "ae8b807b-43a4-47f8-8241-4d3903dace7e"
       },
       "source": [
         "mse_(train_labels, train_res)"
       ],
-      "execution_count": 122,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 122
+          "execution_count": 72
         }
       ]
     },
@@ -828,12 +828,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mdtHJGP0tmaR",
-        "outputId": "558975da-f3e4-4cad-ad62-3f7d80638a22"
+        "outputId": "18533051-f378-4dba-d32e-b2260c6f11cc"
       },
       "source": [
         "mse_(test_labels, res)"
       ],
-      "execution_count": 123,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,7 +843,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 73
         }
       ]
     },
@@ -856,7 +856,7 @@
         "def r_2(labels, res):\n",
         "    return (1 - np.sum((res - labels) ** 2) / np.sum((labels - np.mean(labels))**2))"
       ],
-      "execution_count": 124,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -866,12 +866,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ltoAzhOGtmaS",
-        "outputId": "38f321b3-442c-46e5-afd0-5ac0ded180d5"
+        "outputId": "6b3d2738-3171-42fd-887f-1ffaa6aa0099"
       },
       "source": [
         "r_2(train_labels, train_res)"
       ],
-      "execution_count": 125,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +881,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 75
         }
       ]
     },
@@ -892,12 +892,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FrhT_GsCtmaS",
-        "outputId": "bc807333-dda1-46f8-e72d-fd7a8463697e"
+        "outputId": "2e7d56e5-0881-4b3f-91ca-42197b02dc2d"
       },
       "source": [
         "r_2(test_labels, res)"
       ],
-      "execution_count": 126,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,7 +907,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 76
         }
       ]
     }
