Создано с помощью Colaboratory

--- a/lesson_3_HW.ipynb
+++ b/lesson_3_HW.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lesson_3_HW.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNW7cclqekP12ArUMsIQmK8",
+      "authorship_tag": "ABX9TyOMlh8GBN4+AjXiHpk/m8zZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 228,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 483
         },
-        "outputId": "d627f68b-0721-4c07-f6bd-5a1fb2c8bb93"
+        "outputId": "76bd2ede-8b62-4afd-db6a-e1b47783f264"
       },
       "source": [
         "from sklearn import datasets\n",
@@ -95,7 +95,7 @@
         "plt.scatter([x[0] for x in classes[0]], [x[1] for x in classes[0]], c=classes[1], cmap=colors)\n",
         "plt.show()"
       ],
-      "execution_count": 229,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -118,12 +118,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a0dGzon0cSld",
-        "outputId": "050415b7-226c-49eb-a84a-d281b4b3946d"
+        "outputId": "8394b9e3-921e-42b4-acd6-75eeeee393ce"
       },
       "source": [
         "print(type(classes[0][0]))"
       ],
-      "execution_count": 230,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         " def sigmoid(x):\n",
         "      return 1/(1 + np.exp(-x))"
       ],
-      "execution_count": 231,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "046dfcae-bef5-428e-8777-4ad3a5bb352c"
+        "outputId": "4482bd1e-8b8e-479d-bb78-32c0516d0393"
       },
       "source": [
         "# перемешивание датасета\n",
@@ -176,7 +176,7 @@
         "print(\"Размер массива ответов для обучающей выборки\", y_train.shape)\n",
         "print(\"Размер массива ответов для тестовой выборки\", y_test.shape)"
       ],
-      "execution_count": 232,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "X_test_tr = X_test.transpose()\n",
         "y_test_tr = y_test.reshape(1, y_test.shape[0])"
       ],
-      "execution_count": 233,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
         "    \n",
         "    return loss, grad"
       ],
-      "execution_count": 234,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
         "        \n",
         "    return w, losses"
       ],
-      "execution_count": 235,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
         "    \n",
         "    return y_predicted"
       ],
-      "execution_count": 236,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc781b18-5209-4d68-c86c-25deda250b2b"
+        "outputId": "9d214974-d1d0-4632-f366-a899d8bb5d71"
       },
       "source": [
         "# иницилизируем начальный вектор весов\n",
@@ -329,7 +329,7 @@
         "      print(f\"Колличество иттераций: {n_iterations}\")\n",
         "      print(f\"eta: {eta}\")"
       ],
-      "execution_count": 237,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,15 +408,16 @@
         "id": "5cDI_AwTbEWz"
       },
       "source": [
-        "#def function_count(y_predicted_train, y_train_tr):\n",
-        "  #TP = len(y_predicted_train[(y_train_tr == y_predicted_train) and (y_predicted_train == 1)])\n",
-        "  #FN = len(y_predicted_train[(y_train_tr != y_predicted_train ) and (y_predicted_train  == 0)])\n",
-        "  #FP = len(y_predicted_train[(y_train_tr != y_predicted_train ) and (y_predicted_train  == 1)])\n",
-        "  #TN = len(y_predicted_train[(y_train_tr == y_predicted_train ) and (y_predicted_train  == 0)])\n",
-        "  #return TP, FN, FP, TN    \n",
+        "def function_count(y_predicted_train, y_train_tr):\n",
+        "  TP = len(y_predicted_train[(y_train_tr == y_predicted_train) and (y_predicted_train == 1)])\n",
+        "  FN = len(y_predicted_train[(y_train_tr != y_predicted_train ) and (y_predicted_train  == 0)])\n",
+        "  FP = len(y_predicted_train[(y_train_tr != y_predicted_train ) and (y_predicted_train  == 1)])\n",
+        "  TN = len(y_predicted_train[(y_train_tr == y_predicted_train ) and (y_predicted_train  == 0)])\n",
+        "  \n",
+        "  return TP, FN, FP, TN    \n",
         "\n"
       ],
-      "execution_count": 238,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -428,7 +429,7 @@
         "def function_accuracy(TP, FN, FP, TN ):\n",
         "    return(TN + TP)/(TP + FN + FP + TN)"
       ],
-      "execution_count": 256,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -440,7 +441,7 @@
         "def function_recall(TP, FN):\n",
         "    return TP /(TP + FN)"
       ],
-      "execution_count": 241,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -452,7 +453,7 @@
         "def function_precision(TP,FP):\n",
         "    return TP /(TP + FP)"
       ],
-      "execution_count": 242,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -464,7 +465,7 @@
         "def function_f1_score(recall,precision):\n",
         "    return 2 * recall * precision / (recall+precision)\n"
       ],
-      "execution_count": 243,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -475,13 +476,13 @@
           "height": 180
         },
         "id": "FvmEn_JLm594",
-        "outputId": "e5b6ec25-1412-4cca-ac76-d840e1e67200"
+        "outputId": "cda87987-aeb3-4420-aede-0dee4e0ce358"
       },
       "source": [
         "accuracy = function_accuracy(TP, FN, FP, TN )\n",
         "print(f'accuracy: {accuracy}')"
       ],
-      "execution_count": 257,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "error",
@@ -490,7 +491,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-257-516b13d8a6da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunction_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTN\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'accuracy: {accuracy}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-52-516b13d8a6da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunction_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTN\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'accuracy: {accuracy}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'FN' is not defined"
           ]
         }
@@ -534,17 +535,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7O6FVMIT1wQV"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kuhJlwdWGvnt"
       },
       "source": [
@@ -565,7 +555,7 @@
         "\n",
         "    plt.show()"
       ],
-      "execution_count": 258,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,31 +570,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "id": "6vInJQ9yzCW7",
-        "outputId": "c3be1048-8fdf-443e-f5d7-c913f0655865"
+        "id": "6vInJQ9yzCW7"
       },
       "source": [
         "plt.figure(figsize = (20,5))\n",
         "plt.title('log loss')\n",
-        "\n",
-        "plt.plot(range(len(losses)),np.(log(losses))\n",
-        "plot.grid(True)"
+        "plt.xlabel('iteration')\n",
+        "plt.ylabel('loss')\n",
+        "plt.plot(range(len(losses)), np(log(losses)\n",
+        "plt.grid()"
       ],
-      "execution_count": 260,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-260-22434b1ffb27>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    plt.plot(range(len(losses)),np.(log(losses))\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -622,7 +599,7 @@
       },
       "source": [
         "**6 Попробуйте ответить на вопросы: Могла ли модель переобучиться? На каком шаге это произошло? Почему?**\n",
-        "* Модель переобучилась. Мало данных."
+        "* Модель "
       ]
     }
   ]
