Создано с помощью Colaboratory

--- a/lesson_3_HW.ipynb
+++ b/lesson_3_HW.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lesson_3_HW.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOV/icXyi+bU48JoOhaEiI",
+      "authorship_tag": "ABX9TyNYd8Bkjya3w3Wb12vNGdF0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 317,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
         "plt.scatter([x[0] for x in classes[0]], [x[1] for x in classes[0]], c=classes[1], cmap=colors)\n",
         "plt.show()"
       ],
-      "execution_count": 318,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -123,7 +123,7 @@
       "source": [
         "print(type(classes[0][0]))"
       ],
-      "execution_count": 319,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         " def sigmoid(x):\n",
         "      return 1/(1 + np.exp(-x))"
       ],
-      "execution_count": 320,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "print(\"Размер массива ответов для обучающей выборки\", y_train.shape)\n",
         "print(\"Размер массива ответов для тестовой выборки\", y_test.shape)"
       ],
-      "execution_count": 321,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "X_test_tr = X_test.transpose()\n",
         "y_test_tr = y_test.reshape(1, y_test.shape[0])"
       ],
-      "execution_count": 322,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
         "    \n",
         "    return loss, grad"
       ],
-      "execution_count": 323,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
         "        \n",
         "    return w, losses"
       ],
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
         "    \n",
         "    return y_predicted"
       ],
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +329,7 @@
         "      print(f\"Колличество иттераций: {n_iterations}\")\n",
         "      print(f\"eta: {eta}\")"
       ],
-      "execution_count": 326,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "id": "5cDI_AwTbEWz"
       },
       "source": [
-        "def function_count(y_predicted, y_t):\n",
+        "def function_count(y_predicted, y_predicted_train):\n",
         "\n",
         "  TP = len(y_predicted[(y_train_tr == y_predicted_train) and (y_predicted_train == 1)])\n",
         "  FN = len(y_predicted[(y_train_tr == y_predicted_train ) and (y_predicted_train  == 0)])\n",
@@ -418,7 +418,7 @@
         "  return TP, FN, FP, TN    \n",
         "\n"
       ],
-      "execution_count": 327,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,17 +436,6 @@
         "  \n",
         "  #return TP, FN, FP, TN"
       ],
-      "execution_count": 328,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Quok_UW4BYgs"
-      },
-      "source": [
-        ""
-      ],
       "execution_count": null,
       "outputs": []
     },
@@ -459,7 +448,7 @@
         "def function_accuracy(TP, FN, FP, TN ):\n",
         "    return(TN + TP)/(TP + FN + FP + TN)"
       ],
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -471,7 +460,7 @@
         "def function_recall(TP, FN):\n",
         "    return TP /(TP + FN)"
       ],
-      "execution_count": 330,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +472,7 @@
         "def function_precision(TP,FP):\n",
         "    return TP /(TP + FP)"
       ],
-      "execution_count": 331,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -495,7 +484,7 @@
         "def function_f1_score(recall,precision):\n",
         "    return 2 * recall * precision / (recall+precision)\n"
       ],
-      "execution_count": 332,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -517,7 +506,7 @@
         "   print(f'recall: {recall}')\n",
         "   print(f'function_f1_score: {recall,precision}')"
       ],
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,24 +532,24 @@
         "\n",
         "    plt.show()"
       ],
-      "execution_count": 334,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fu_LHoxT5dts",
-        "outputId": "2ee871a8-464e-409b-8945-939092d320eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
-        }
+        },
+        "outputId": "2ee871a8-464e-409b-8945-939092d320eb"
       },
       "source": [
         "matrixs(y_test_tr[0], y_predicted_test[0])\n",
         "show_predict(w, X_test_tr, y_predicted_test, y_test_tr)"
       ],
-      "execution_count": 336,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -613,11 +602,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6vInJQ9yzCW7",
-        "outputId": "10031693-cb18-4ef1-9cde-380818c15ddd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "outputId": "10031693-cb18-4ef1-9cde-380818c15ddd"
       },
       "source": [
         "plt.figure(figsize = (20,5))\n",
@@ -627,7 +616,7 @@
         "plt.plot(range(len(losses)), np.log(losses))\n",
         "plt.grid(True)"
       ],
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -682,23 +671,23 @@
         "    plt.legend(' ', title=f'AUC-ROC={AUC_ROC:.3f}', loc='lower right')\n",
         "    plt.plot(FPR, TPR)"
       ],
-      "execution_count": 339,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MG622azgBbfM",
-        "outputId": "67c2575b-7013-4340-e81a-f5a6d4636d40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        }
+        },
+        "outputId": "67c2575b-7013-4340-e81a-f5a6d4636d40"
       },
       "source": [
         "ROC(w, X_train_tr, y_train_tr)"
       ],
-      "execution_count": 340,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -720,16 +709,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "SbewJVW8Bn0d",
-        "outputId": "98648b76-b959-4e19-8b2e-ee06da545778",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        }
+        },
+        "outputId": "98648b76-b959-4e19-8b2e-ee06da545778"
       },
       "source": [
         "ROC(w, X_test_tr, y_test_tr)"
       ],
-      "execution_count": 341,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
