Создано с помощью Colaboratory

--- a/lesson_3_HW.ipynb
+++ b/lesson_3_HW.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lesson_3_HW.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYd8Bkjya3w3Wb12vNGdF0",
+      "authorship_tag": "ABX9TyNPK4ojp60yZ8+WbMj6jLNS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,7 +434,14 @@
         "  #FP = sum((y_predicted == 1) and (y_predicted_train  == 1))\n",
         "  #TN = sum((y_predicted == 0) and (y_predicted_train  == 0))\n",
         "  \n",
-        "  #return TP, FN, FP, TN"
+        "  #return TP, FN, FP, TN\n",
+        "\n",
+        "   #{'y_predicted': ['a(x) = +1', 'a(x) = -1'], \n",
+        "        # 'y_predicted_train = +1': [TP, FN], \n",
+        "        # 'y_predicted_train = -1': [FP, TN]}).set_index('y_predicted')\n",
+        "   # return corr_matrix\n",
+        "\n",
+        "#correlation_matrix(y_pred, y)"
       ],
       "execution_count": null,
       "outputs": []
