Создано с помощью Colaboratory

--- a/lesson_8_HW.ipynb
+++ b/lesson_8_HW.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lesson_8_HW.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnVs41fIIquSnLjhOVB60N",
+      "authorship_tag": "ABX9TyMLh9geKalLVrba2draQK6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "import warnings\n",
         "warnings.simplefilter('ignore')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "X = iris.data\n",
         "X.shape"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
         "X_scaled = scaler.fit_transform(X)\n",
         "U, D, V = np.linalg.svd(X_scaled)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "source": [
         "U.shape, D.shape, V.shape"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
         "# а теперя оценим кумулятивную (то есть накапливаемую) дисперсию при учитывании каждой из компонент\n",
         "print(f'Кумулятивная доля дисперсии по компонентам \\n{cum_var_exp}')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "W = V[:, :3]\n",
         "W"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +223,7 @@
         "X_ = X @ W\n",
         "X_"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
         "X_train_scaled = scaler.fit_transform(X_train)\n",
         "X_test_scaled = scaler.transform(X_test)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
         "id": "PBfHK_2P9whN"
       },
       "source": [
-        "Обучение модели до применения PCA"
+        "до применения PCA"
       ]
     },
     {
@@ -444,7 +444,7 @@
         "print(accuracy_score(y_train, y_pred_train))\n",
         "print(accuracy_score(y_test, y_pred_test))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
         "id": "uXG0TGZs9whN"
       },
       "source": [
-        "Обучение модели после применения PCA"
+        "после применения PCA"
       ]
     },
     {
@@ -487,7 +487,7 @@
         "print(accuracy_score(y_train, y_pred_train))\n",
         "print(accuracy_score(y_test, y_pred_test))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
